try catch use case

--- a/css/smallTricks.html
+++ b/css/smallTricks.html
@@ -5,12 +5,14 @@
 
             body{
                 background-color: black;
+                align-items: center;
+                justify-content: center;
+                display: flex;
             }
             #hearttricks{
-                height: 400px;
-                top: 218px;
-                left: 260px;
-                position: relative;
+                align-items: center;
+                justify-content: center;
+                display: flex;
             }
             #heart {
                 position: relative;
@@ -48,6 +50,17 @@
                margin: 22px 71px;
                 color: white
            }
+
+           #test{
+
+           }
+           #test::after{
+
+           }
+           #test::before{
+               
+           }
+
         </style>
     </head>
     <body>
@@ -59,6 +72,10 @@
             </div>
             <h1>You</h1>
 
+        </div>
+
+        <div id="test">
+            Hello
         </div>
         
     </body>
